fixing text alignment

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ main {
     width: 70vw;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 #sideLeft {
@@ -18,6 +19,11 @@ main {
     width: 30vw;
     background-image: linear-gradient(to right,white, rgb(114, 114, 114));
     
+}
+
+#header{
+    display: flex;
+    flex-direction: row;
 }
 
 #sideRight {
